--- a/java-oop-ru/.gitignore
+++ b/java-oop-ru/.gitignore
@@ -8,3 +8,9 @@ caches/
 ../.DS_Store
 
 
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
