--- a/java-oop-ru/code-generation/build.gradle
+++ b/java-oop-ru/code-generation/build.gradle
@@ -9,13 +9,13 @@ repositories {
 }
 
 dependencies {
-  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0-M1'
-  testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.0-M1'
-  testImplementation 'org.assertj:assertj-core:3.19.0'
+  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.0-M2'
+  testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.2'
+  testImplementation 'org.assertj:assertj-core:3.25.3'
 
-  implementation 'com.fasterxml.jackson.core:jackson-core:2.8.8'
-  implementation 'com.fasterxml.jackson.core:jackson-annotations:2.8.8'
-  implementation 'com.fasterxml.jackson.core:jackson-databind:2.8.8'
+  implementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'
+  implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.1'
+  implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
 }
 
 test {
