--- a/java-spring-ru/jpa-data/src/main/resources/application.yml
+++ b/java-spring-ru/jpa-data/src/main/resources/application.yml
@@ -1,5 +1,11 @@
 ---
-
 # BEGIN
-
+spring:
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+  output:
+    ansi:
+      enabled: always
 # END
